fix Refaster warning about accessing first list-item.